gitops/apps/my-ui/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: my-ui
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: my-ui
  template:
    metadata:
      labels:
        app: my-ui
        env: dev
    spec:
      containers:
        - name: my-ui
          image: ghcr.io/benjakunee17/my-ui:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
  strategy:
    canary:
      stableService: my-ui-stable
      canaryService: my-ui-canary
      trafficRouting:
        nginx:
          stableIngress: my-ui
      abortScaleDownDelaySeconds: 0
      steps:
        - setWeight: 20
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 30s
