gitops/apps/my-ui/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ui-stable
spec:
  selector:
    app: my-ui
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-ui-canary
spec:
  selector:
    app: my-ui
  ports:
  - port: 80
    targetPort: 80
