gitops/apps/my-ui/base/ingress.yaml
#ใช้ Ingress NGINX เพราะต้องการ Ingress Controller สำหรับรับ traffic เข้า cluster

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: my-ui-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-ui-stable
                port:
                  number: 80
